LinKreta_POC_Repository/force-app/main/default/objects/zoom_app__Zoom_Webinar_Config__c/fields/zoom_app__Add_Registrants_as_Campaign_Members__c.field-meta.xml
<CustomField>
    <fullName>zoom_app__Add_Registrants_as_Campaign_Members__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Automatically add Webinar registrants as Campaign members.</description>
    <inlineHelpText>Automatically add Webinar registrants as Campaign members.</inlineHelpText>
    <label>Add Registrants as Campaign Members</label>
    <type>Checkbox</type>
</CustomField>