LinKreta_POC_Repository/force-app/main/default/objects/zoom_app__Zoom_Webinar_Config__c/fields/zoom_app__Create_Campaign_for_each_Webinar__c.field-meta.xml
<CustomField>
    <fullName>zoom_app__Create_Campaign_for_each_Webinar__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Automatically create a Salesforce Campaign for each new Webinar</description>
    <inlineHelpText>Automatically create a Salesforce Campaign for each new Webinar</inlineHelpText>
    <label>Create Campaign for each Webinar</label>
    <type>Checkbox</type>
</CustomField>