LinKreta_POC_Repository/force-app/main/default/objects/zoom_app__Zoom_Webinar_Config__c/fields/zoom_app__Create_new_Lead__c.field-meta.xml
<CustomField>
    <fullName>zoom_app__Create_new_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Automatically create new Leads for Non-Salesforce registrants(Can&apos;t match with any Contact/Lead by Email).</description>
    <inlineHelpText>Automatically create new Leads for Non-Salesforce registrants(Can&apos;t match with any Contact/Lead by Email).</inlineHelpText>
    <label>Create new Lead</label>
    <type>Checkbox</type>
</CustomField>