LinKreta_POC_Repository/force-app/main/default/objects/zoom_app__Zoom_Webinar_Config__c/fields/zoom_app__Sync_Webinar__c.field-meta.xml
<CustomField>
    <fullName>zoom_app__Sync_Webinar__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable Backend Job to Sync Webinar from Zoom to Salesfore, inlcuding New Webinar/Registrants/Panelist/Participants</description>
    <inlineHelpText>Enable Backend Job to Sync Webinar from Zoom to Salesfore, inlcuding New Webinar/Registrants/Panelist/Participants</inlineHelpText>
    <label>Enable Sync Webinar Job</label>
    <type>Checkbox</type>
</CustomField>